# pg2pd

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  setup.py
lib/rust/: binary.rs  common.rs  decode.rs  lib.rs
pg2pd/: __init__.py  pg2pd.py
pg2pd/lib/: __init__.py
pg2pd/lib/rust/: __init__.py
test/: conftest.py  test_make_df.py  test_perf.py
