[package]
name = "pg2pd"
version = "0.1.0"
authors = ["Ryan Whittingham <ryanwhittingham89@gmail.com>"]
edition = "2018"

[dependencies]
bitvec-rs = "0.2.0"
byteorder = "1.4.3"
enum-as-inner = "0.3.3"
log = "0.4.14"
pyo3 = { version = "0.13.0", features = ["extension-module"] }
pyo3-log = "0.5.0"
rayon = "1.5.1"

[lib]
name = "__pg2pd_rust"
path = "lib/rust/lib.rs"
crate-type = ["cdylib"]
